# LudToJsonCompiler

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/json/: 00'Y'.json  10-Ring.json  12-Ring.json  1D Chess.json  20 Squares.json  2048.json  3 6 9.json  33 Circles.json  3D Tic-Tac-Toe.json  3x14 Game.json  4 Squared.json  58 Holes.json  A K'aak'il.json  A Simple Game.json  A-i-u.json  Aasha.json  Abak.json  Abalala'e.json  Abande.json  Abanga.json  Aboyne.json  Abrobad.json  Acedrex (Alfonso).json  Acedrex de los Cuatros Tiempos.json  Achi.json  Ad elta stelpur.json  Addi Kul.json  Adere.json  Adhesion.json  Adi.json  Adidada.json  Adjiboto.json  Adjito.json  Adugo.json  Adzua (Children).json  Adzua.json  Affinage.json  Agapi.json  Agilidade.json  Agon.json  (+1563 more)
data/processed/: 10-Ring.txt  12-Ring.txt  1D Chess.txt  20 Squares.txt  2048.txt  3 6 9.txt  33 Circles.txt  3D Tic-Tac-Toe.txt  3x14 Game.txt  4 Squared.txt  58 Holes.txt  A K'aak'il.txt  A Simple Game.txt  A-i-u.txt  Aasha.txt  Abak.txt  Abalala'e.txt  Abande.txt  Abanga.txt  Aboyne.txt  Abrobad.txt  Acedrex (Alfonso).txt  Acedrex de los Cuatros Tiempos.txt  Achi.txt  Ad elta stelpur.txt  Addi Kul.txt  Adere.txt  Adhesion.txt  Adi.txt  Adidada.txt  Adjiboto.txt  Adjito.txt  Adugo.txt  Adzua (Children).txt  Adzua.txt  Affinage.txt  Agapi.txt  Agilidade.txt  Agon.txt  Ahtarah Guti.txt  (+1563 more)
data/raw/: 1D Chess.lud  Adjito.lud  Allemande.lud  Alquerkonane.lud  Ataxx.lud  Bajii.lud  Balkan Mancala.lud  Caseheapana.lud  Dablo (Large).lud  Dajam.lud  (+40 more)
src/: clean_files.py  fetch_lud_files.py  parse_json.py
